DATA: Use MySql

--- a/Lugat/appsettings.json
+++ b/Lugat/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=138.197.125.102;Database=AllDB;User=jaloliddin;Password=Jaloliddin.Dev1596Dev;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
