--- a/Lugat/appsettings.json
+++ b/Lugat/appsettings.json
@@ -1,7 +1,7 @@
 {
-    "ConnectionStrings": {
-      "DefaultConnection": "Data Source=app.db"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=159.223.59.206;Database=LugatDB;User=jaloliddin;Password=Jaloliddin.Dev1596Dev;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
